 - [web] allow edition of IMAP flags associated to mail labels

Bug fixes
 - [core] yearly repeating events are not shown in web calendar (#4237)
 - [core] increased column size of settings/defaults for MySQL (#4260)
 - [core] fixed yearly recurrence calculator with until date
 - [core] generalized HTML sanitization to avoid encoding issues when replying/forwarding mails
 - [web] fixed display of error when the mail editor is in a popup
 - [web] attachments are not displayed on IOS (#4150)
 - [web] fixed parsing of pasted email addresses from Spreadsheet (#4258)
 - [web] messages list not accessible when changing mailbox in expanded mail view (#4269)
 - [web] only one postal address of same type is saved (#4091)
 - [web] improve handling of email notifications of a calendar properties
 - [web] fixed XSRF cookie path when changing password (#4139)
 - [web] spaces can now be inserted in address book names
 - [web] prevent the creation of empty contact categories
 - [web] fixed mail composition from message headers (#4335)
 - [web] restore messages selection after automatic refresh (#4330)
 - [eas] hebrew folders encoding problem using EAS (#4240)
 - [eas] avoid sync requests for shared folders every second (#4275)

3.2.10 (2017-07-05)
-------------------

New features
 - [web] new images viewer in Mail module
 - [web] create list from selected cards (#3561)
 - [eas] initial EAS v16 and email drafts support
 - [core] load-testing scripts to evaluate SOGo performance

Enhancements
 - [core] now possible to {un}subscribe to folders using sogo-tool
 - [web] AngularJS optimizations in Mail module
 - [web] AngularJS optimization of color picker
 - [web] improve display of tasks status
 - [web] added custom fields support from Thunderbird's address book
 - [web] added Latvian (lv) translation - thanks to Juris Balandis
 - [web] expose user's defaults and settings inline
 - [web] can now discard incoming mails during vacation